Removed npm warnings during building

--- a/package.json
+++ b/package.json
@@ -1,35 +1,31 @@
 {
-  "name": "juboxx",
+  "name": "barricade",
   "version": "2.0.0",
   "description": "",
-  "main": "app.js",
   "scripts": {
     "watch": "webpack --progress --colors --watch",
     "build": "webpack --progress --colors -p",
     "start": "node javascripts/server/index.js"
   },
   "author": "",
-  "license": "ISC",
   "dependencies": {
     "babel-core": "*",
     "babel-loader": "*",
-    "babel-preset-es2015": "*",
-    "babel-preset-es2017": "*",
-    "babel-preset-stage-2": "*",
+    "babel-preset-env": "*",
     "css-loader": "*",
     "css-raw-loader": "*",
-    "express": "^4.16.2",
+    "express": "*",
     "extract-text-webpack-plugin": "*",
     "jquery": "*",
     "node-sass": "*",
     "sass-loader": "*",
-    "socket.io": "^2.0.4",
-    "socket.io-client": "^2.0.4",
+    "socket.io": "*",
+    "socket.io-client": "*",
     "style-loader": "*",
-    "vue": "^2.5.13",
-    "vue-loader": "^13.6.2",
-    "vue-template-compiler": "^2.5.13",
-    "vuex": "^3.0.1",
+    "vue": "*",
+    "vue-loader": "*",
+    "vue-template-compiler": "*",
+    "vuex": "*",
     "webpack": "*"
   }
 }
