Changed script name for running the node server

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "watch": "webpack --progress --colors --watch",
     "build": "webpack --progress --colors -p",
-    "start": "node javascripts/server/index.js",
-    "start-new": "node javascripts/server_new/index.js"
+    "server": "node javascripts/server/index.js"
   },
   "author": "",
   "dependencies": {
